# python-template

./: pyproject.toml  setup.cfg
