[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-name"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
  "example-dep1~=3.5.2",
  "example-dep2~=1.4.0",
]

[project.scripts]
cli-name = "project_name.main:main"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "--strict-markers -s --cache-clear --junitxml=test_report.xml"
testpaths = ["tests"]
